tests/sksl/errors/MatrixToVectorCastTooSmall.glsl
### Compilation failed:

error: 4: invalid argument to 'half' constructor (expected a number or bool, but found 'half2x2')
error: 5: 'half2x2' is not a valid parameter to 'half2' constructor
error: 6: 'half2x2' is not a valid parameter to 'half3' constructor
3 errors
